Phase 4: Colab deployment & validation
- Added validate_phase4.py: Quick module checks (<5 seconds)
  * Config loading, encoder/decoder instantiation
  * Forward pass validation (75K51275K)
  * Multi-loss computation (MSE+SSIM+FFT)
  * Augmentation pipeline testing
  * Result: All tests pass

- Created notebooks/05_ssl_pretraining_colab.ipynb
  * Single-page orchestration for Phase 5 training
  * Mount Drive, clone repo, install deps, verify GPU
  * Run 50-epoch training with checkpoint saving
  * Monitor loss curves and validate reconstruction quality

- Created colab_src/utils/colab_utils.py
  * Colab environment detection helpers
  * Optional utilities for improved readability
  * All functionality available through SSLConfig

- Updated README.md with comprehensive documentation
  * Phase 0-8 roadmap with gates and success criteria
  * Quick start guide (local + Colab)
  * Project structure diagram
  * Architecture overview with equations
  * Performance predictions per phase

- Updated requirements.txt
  * Added PyYAML explicitly for config loading
  * All packages locked to specific versions

- Cleaned .gitignore
  * Removed overly strict rules for documentation
  * Keep context/, PHASE_*.md, IMPLEMENTATION_INDEX.md
  * Exclude only runtime data artifacts

Ready for Phase 5: Full Colab GPU training (50 epochs, ~8-12 hours)

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ data/cache/**/*.json
 data/metadata/**/*.csv
 data/features/**/*.csv
 
+# Note: context/, PHASE_*.md, IMPLEMENTATION_INDEX.md are KEPT
+# These are valuable documentation and should be in the repo
+
+
 # Signal batches
 data/processed/signal_batches/
 
