--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ mlflow>=2.9.0
 # Configuration management
 hydra-core>=1.3.0
 omegaconf>=2.3.0
+PyYAML>=6.0
 
 # Parquet file support
 pyarrow>=14.0.0
