--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,64 @@
-numpy>=1.24.0,<2.0.0
+# CORE NUMERICAL STACK (Aligned for 2026 standards)
+numpy>=2.0.0,<2.3.0       # Required by OpenCV, JAX, and PyTensor
 pandas>=2.2.2
-scipy>=1.11.0
-scikit-learn>=1.3.0
+scipy>=1.14.0             # Updated to support NumPy 2.x
+scikit-learn>=1.5.0       # Updated for compatibility with modern stacks
 
-# MIMIC-III waveform database access
+# MIMIC-III AND PHYSIOLOGICAL TOOLS
 wfdb==4.1.2
-
-# HRV and physiological feature extraction
 neurokit2>=0.2.7
-
-# Wavelet transforms for denoising
 PyWavelets>=1.4.1
 
-# Gradient boosting
+# GRADIENT BOOSTING AND DEEP LEARNING
 xgboost>=2.0.0
 lightgbm>=4.1.0
+torch>=2.5.0              # Updated to ensure NumPy 2.x compatibility
+torchvision>=0.20.0
+torchaudio>=2.5.0
 
-# Deep learning
-torch>=2.1.0
-torchvision>=0.16.0
-torchaudio>=2.1.0
-
-# ICD-9/10 code processing and Charlson Comorbidity Index
+# CLINICAL AND EXPERIMENT TRACKING
 comorbidipy>=0.3.0
-
-# Experiment tracking
 mlflow>=2.9.0
-
-# Configuration management
 hydra-core>=1.3.0
 omegaconf>=2.3.0
 PyYAML>=6.0
 
-# Parquet file support
+# DATA INFRASTRUCTURE
 pyarrow>=14.0.0
 fastparquet>=2023.10.0
-
-# Model serialization
 joblib>=1.3.0
-
-matplotlib>=3.8.0
-seaborn>=0.13.0
-plotly>=5.18.0
-
-# SHAP values for explainability
-shap>=0.44.0
-# Data validation framework
 great-expectations>=0.18.0
 
-# Statistical tests
-statsmodels>=0.14.0
+# VISUALIZATION AND EXPLAINABILITY
+matplotlib>=3.10.0        # Latest stable for 2026
+seaborn>=0.13.0
+plotly>=5.18.0
+shap>=0.44.0
 
-# FastAPI for REST endpoints
+# DEPLOYMENT AND STATS
+statsmodels>=0.14.0
 fastapi>=0.108.0
 uvicorn[standard]>=0.25.0
 pydantic>=2.5.0
-
-# ONNX for model export
 onnx>=1.15.0
 onnxruntime>=1.16.0
-
-# API documentation
 python-multipart>=0.0.6
-
-# Progress bars
-tqdm>=4.66.0
-
-# HTTP requests for PhysioNet downloads
 requests>=2.31.0
-
-# Python utilities
+tqdm>=4.66.0
 python-dateutil>=2.8.2
 
-# Code formatting
+# JUPYTER & COLLAB COMPATIBILITY (Resolving Conflicts)
+# Note: Google Colab 1.0.0 has a hard requirement for ipykernel~=4.10 or ~=6.17.
+# In a local environment, use the versions below.
+ipykernel>=6.29.0         # Modern stable for local use
+notebook>=7.0.0
+jupyter-client>=8.0.0
+
+# DEVELOPMENT AND QUALITY
 black>=23.12.0
 isort>=5.13.0
-
-# Linting
 pylint>=3.0.0
-flake8>=7.0.0.
-
-# Type checking
+flake8>=7.0.0
 mypy>=1.7.0
-
-# Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
-
-# Jupyter support
-jupyter>=1.0.0
-notebook>=7.0.0
-ipykernel>=6.27.0
