--- a/configs/ssl_pretraining.yaml
+++ b/configs/ssl_pretraining.yaml
@@ -39,7 +39,7 @@ training:
   weight_decay: 1.0e-5
   warmup_epochs: 5
   max_grad_norm: 1.0
-  use_mixed_precision: true
+  use_mixed_precision: false
   num_workers: 4
   pin_memory: true
 
