Enhance SSL training configuration by introducing a loss mode switch for debugging, allowing users to toggle between hybrid and pure MSE loss. Update DataLoader to support window length parameter and improve handling of denoised signals. Adjust notebook for consistency with new output IDs and enhance training monitoring features.

--- a/configs/ssl_pretraining.yaml
+++ b/configs/ssl_pretraining.yaml
@@ -22,6 +22,7 @@ model:
   max_filters: 512
 
 loss:
+  mode: "hybrid" # "hybrid" (default) or "mse" (debug: disable SSIM/FFT)
   mse_weight: 0.50
   ssim_weight: 0.30
   fft_weight: 0.20
